--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   direct_select: ^2.0.0
   grouped_list: ^4.0.0
   flutter_secure_storage: ^4.1.0
+  flutter_bluetooth_serial: ^0.3.2
+  flutter_blue: ^0.8.0
 
 dev_dependencies:
   flutter_test:
