--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.0.6
   flutter_bluetooth_serial: ^0.3.2
   flutter_blue: ^0.8.0
+  string_validator: ^0.3.0
 
 dev_dependencies:
   flutter_test:
