--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_blue: ^0.8.0
   string_validator: ^0.3.0
   http: ^0.13.3
+  charts_flutter: ^0.11.0
 
 dev_dependencies:
   flutter_test:
