--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,8 @@ dependencies:
   string_validator: ^0.3.0
   http: ^0.13.3
   email_validator: ^2.0.1
-
   charts_flutter: ^0.11.0
+  fluttertoast: ^8.0.8
 
 dev_dependencies:
   flutter_test:
