--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   email_validator: ^2.0.1
   charts_flutter: ^0.11.0
   fluttertoast: ^8.0.8
+  percent_indicator: ^3.4.0
 
 dev_dependencies:
   flutter_test:
