--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   charts_flutter: ^0.11.0
   fluttertoast: ^8.0.8
   percent_indicator: ^3.4.0
+  dio: ^4.0.4
+  #path_provider: ^2.0.8
+  flutter_nordic_dfu: ^3.0.0
 
 dev_dependencies:
   flutter_test:
