--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   fluttertoast: ^8.0.8
   percent_indicator: ^3.4.0
   dio: ^4.0.4
-  #path_provider: ^2.0.8
+  path_provider: ^2.0.3
   flutter_nordic_dfu: ^3.0.0
 
 dev_dependencies:
@@ -69,7 +69,11 @@ flutter:
     - assets/spo2Records.json
     - assets/stepsSleepRecords.json
     - assets/tempRecords.json
-
+    - assets/app_dfu_merged.zip
+    - assets/dfu_application_1.zip
+    - assets/dfu_application_0.zip
+    - assets/dfu_application_0u.zip
+    - assets/dfu_application_0d.zip
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
